Fix spacing.

--- a/resources/scss/components/list-item.scss
+++ b/resources/scss/components/list-item.scss
@@ -13,6 +13,7 @@
   img {
     width: 2rem;
     height: 2rem;
+    min-width: 2rem;
     border-radius: 50%;
     overflow: hidden;
   }
